# payment_service

./: .env.template  .gitignore  README.md  backend.Dockerfile  bankcard.Dockerfile  compose.yml  filebeat.yml  frontend.Dockerfile  package.json  site_prototype.Dockerfile  vite.config.ts
backend/: Dockerfile  pom.xml
backend-commons/: pom.xml
bank_card/: Dockerfile  pom.xml
frontend/: docker-compose.yaml  (+2 more)
site_prototype/: Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
site_prototype/carts/: admin.py  context_processors.py  listeners.py  models.py  urls.py  views.py
site_prototype/carts/management/commands/: listen_to_transactions.py
site_prototype/carts/migrations/: 0001_initial.py
site_prototype/products/: admin.py  models.py  urls.py  views.py
site_prototype/products/management/commands/: populate_db.py
site_prototype/products/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options_and_more.py
site_prototype/shop/: settings.py  urls.py
site_prototype/static/css/: style.css
site_prototype/templates/: base.html
site_prototype/templates/carts/: cart_list.html  checkout.html
site_prototype/templates/products/: category_detail.html  category_list.html  product_detail.html  product_list.html
site_prototype/templates/users/: login.html  password_change.html  password_change_done.html  profile.html  register.html
site_prototype/users/: admin.py  forms.py  models.py  urls.py  views.py
site_prototype/users/migrations/: 0001_initial.py  0002_alter_customuser_options_alter_customuser_birth_date_and_more.py
(+94 files in other folders)
