[tool.poetry]
name = "site-prototype"
version = "0.1.0"
description = ""
authors = ["Andrey Melchikov <andrei.melchikov25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.10"
django = "^5.1.2"
pillow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
